--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -2,38 +2,41 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow" Height="350" Width="525">
-    <Grid Name="MyGrid">
+    <Grid Name="Grid1">
         <Grid.RowDefinitions>
-            <RowDefinition></RowDefinition>
-            <RowDefinition Height =" 20"></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
+            <RowDefinition/>
+            <RowDefinition Height="20" />
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition></ColumnDefinition>
             <ColumnDefinition></ColumnDefinition>
             <ColumnDefinition></ColumnDefinition>
             <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
         </Grid.ColumnDefinitions>
-        <TextBox Margin="10" Grid.ColumnSpan="4" FontSize="20"  Name="Box"/>
-        <Button Name="Button1" Grid.Row="2" Grid.Column="0" Margin="10" Content="1" Click="Button1_Click" FontSize="20" FontWeight="Bold"></Button>
-        <Button Name="Button2" Grid.Row="2" Grid.Column="1" Margin="10" Content="2" Click="Button1_Click" FontSize="20" FontWeight="Bold"></Button>
-        <Button Name="Button3" Grid.Row="2" Grid.Column="2" Margin="10" Content="3" Click="Button1_Click" FontSize="20" FontWeight="Bold"></Button>
-        <Button Name="Button4" Grid.Row="3" Grid.Column="0" Margin="10" Content="4" Click="Button1_Click" FontSize="20" FontWeight="Bold"></Button>
-        <Button Name="Button5" Grid.Row="3" Grid.Column="1" Margin="10" Content="5" Click="Button1_Click" FontSize="20" FontWeight="Bold"></Button>
-        <Button Name="Button6" Grid.Row="3" Grid.Column="2" Margin="10" Content="6" Click="Button1_Click" FontSize="20" FontWeight="Bold"></Button>
-        <Button Name="Button7" Grid.Row="4" Grid.Column="0" Margin="10" Content="7" Click="Button1_Click" FontSize="20" FontWeight="Bold"></Button>
-        <Button Name="Button8" Grid.Row="4" Grid.Column="1" Margin="10" Content="8" Click="Button1_Click" FontSize="20" FontWeight="Bold"></Button>
-        <Button Name="Button9" Grid.Row="4" Grid.Column="2" Margin="10" Content="9" Click="Button1_Click" FontSize="20" FontWeight="Bold"></Button>
-        <Button Name="Button0" Grid.Row="5" Grid.Column="1" Margin="10" Content="0" Click="Button1_Click" FontSize="20" FontWeight="Bold"></Button>
-        <Button Name="ButtonDot" Grid.Row="5" Grid.Column="0" Margin="10" Content="." Click="Button1_Click" FontSize="20" FontWeight="Bold"></Button>
-        <Button Name="ButtonEqual" Grid.Row="5" Grid.Column="2" Margin="10" Content="=" Click="Button1_Click" FontSize="20" FontWeight="Bold"></Button>
-        <Button Name="ButtonPlus" Grid.Row="2" Grid.Column="3" Margin="10" Content="+" Click="Button1_Click" FontSize="20" FontWeight="Bold"></Button>
-        <Button Name="ButtonMinus" Grid.Row="3" Grid.Column="3" Margin="10" Content="-" Click="Button1_Click" FontSize="20" FontWeight="Bold"></Button>
-        <Button Name="ButtonMult" Grid.Row="4" Grid.Column="3" Margin="10" Content="*" Click="Button1_Click" FontSize="20" FontWeight="Bold"></Button>
-        <Button Name="ButtonDiv" Grid.Row="5" Grid.Column="3" Margin="10" Content="/" Click="Button1_Click" FontSize="20" FontWeight="Bold"></Button>
-        <Button Name="ButtonClear" Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="4" Margin="10" Content="Clear" FontSize="20" FontWeight="Bold" Click="ButtonClear_Click"></Button>    </Grid>
+        <TextBox Margin="10" Grid.ColumnSpan="5" Name="Box" FontSize="20" FontWeight="Bold" IsReadOnly="True"/>
+        <Button Name="Button1" Grid.Row="2" Grid.Column="0" Margin="10" Content="1" Click="ButtonDigit_Click" FontSize="20" FontWeight="Bold"></Button>
+        <Button Name="Button2" Grid.Row="2" Grid.Column="1" Margin="10" Content="2" Click="ButtonDigit_Click" FontSize="20" FontWeight="Bold"></Button>
+        <Button Name="Button3" Grid.Row="2" Grid.Column="2" Margin="10" Content="3" Click="ButtonDigit_Click" FontSize="20" FontWeight="Bold"></Button>
+        <Button Name="Button4" Grid.Row="3" Grid.Column="0" Margin="10" Content="4" Click="ButtonDigit_Click" FontSize="20" FontWeight="Bold"></Button>
+        <Button Name="Button5" Grid.Row="3" Grid.Column="1" Margin="10" Content="5" Click="ButtonDigit_Click" FontSize="20" FontWeight="Bold"></Button>
+        <Button Name="Button6" Grid.Row="3" Grid.Column="2" Margin="10" Content="6" Click="ButtonDigit_Click" FontSize="20" FontWeight="Bold"></Button>
+        <Button Name="Button7" Grid.Row="4" Grid.Column="0" Margin="10" Content="7" Click="ButtonDigit_Click" FontSize="20" FontWeight="Bold"></Button>
+        <Button Name="Button8" Grid.Row="4" Grid.Column="1" Margin="10" Content="8" Click="ButtonDigit_Click" FontSize="20" FontWeight="Bold"></Button>
+        <Button Name="Button9" Grid.Row="4" Grid.Column="2" Margin="10" Content="9" Click="ButtonDigit_Click" FontSize="20" FontWeight="Bold"></Button>
+        <Button Name="Button0" Grid.Row="5" Grid.Column="1" Margin="10" Content="0" Click="ButtonDigit_Click" FontSize="20" FontWeight="Bold"></Button>
+        <Button Name="ButtonDot" Grid.Row="5" Grid.Column="0" Margin="10" Content="." Click="ButtonDigit_Click" FontSize="20" FontWeight="Bold"></Button>
+        <Button Name="ButtonEqual" Grid.Row="5" Grid.Column="3" Grid.ColumnSpan="2"  Margin="10" Content="=" Click="ButtonSymbol_Click" FontSize="20" FontWeight="Bold"></Button>
+        <Button Name="ButtonPlus" Grid.Row="2" Grid.Column="3" Margin="10" Content="+" Click="ButtonSymbol_Click" FontSize="20" FontWeight="Bold"></Button>
+        <Button Name="ButtonMinus" Grid.Row="3" Grid.Column="3" Margin="10" Content="-" Click="ButtonSymbol_Click" FontSize="20" FontWeight="Bold"></Button>
+        <Button Name="ButtonMult" Grid.Row="2" Grid.Column="4" Margin="10" Content="*" Click="ButtonSymbol_Click" FontSize="20" FontWeight="Bold"></Button>
+        <Button Name="ButtonDiv" Grid.Row="3" Grid.Column="4" Margin="10" Content="/" Click="ButtonSymbol_Click" FontSize="20" FontWeight="Bold"></Button>
+        <Button Name="ButtonLeftParenthesis" Grid.Row="4" Grid.Column="3" Margin="10" Content="(" Click="ButtonSymbol_Click" FontSize="20" FontWeight="Bold"/>
+        <Button Name="ButtonRightParenthesis" Grid.Row="4" Grid.Column="4" Margin="10" Content=")" Click="ButtonSymbol_Click" FontSize="20" FontWeight="Bold"/>
+        <Button Name="ButtonClear" Grid.Row="5" Grid.Column="2" Margin="10" Content="Clear" FontSize="20" FontWeight="Bold" Click="ButtonClear_Click"></Button>
+    </Grid>
 </Window>
