--- a/WPFCalculator/App.xaml
+++ b/WPFCalculator/App.xaml
@@ -1,4 +1,4 @@
-﻿<Application x:Class="SimpleCalculatorGroup2.App"
+﻿<Application x:Class="Learning.Calculator.WPFCalculator.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              StartupUri="MainWindow.xaml">
