--- a/WPFCalculator/MainWindow.xaml
+++ b/WPFCalculator/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="SimpleCalculatorGroup2.MainWindow"
+﻿<Window x:Class="Learning.Calculator.WPFCalculator.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow" Height="350" Width="525">
@@ -18,7 +18,7 @@
             <ColumnDefinition></ColumnDefinition>
             <ColumnDefinition></ColumnDefinition>
         </Grid.ColumnDefinitions>
-        <TextBox Margin="10" Grid.ColumnSpan="5" Name="Box" FontSize="20" FontWeight="Bold" IsReadOnly="True"/>
+        <TextBox Margin="10" Grid.ColumnSpan="5" Name="Box" FontSize="20" FontWeight="Bold" IsReadOnly="True" />
         <Button Name="Button1" Grid.Row="2" Grid.Column="0" Margin="10" Content="1" Click="ButtonDigit_Click" FontSize="20" FontWeight="Bold"></Button>
         <Button Name="Button2" Grid.Row="2" Grid.Column="1" Margin="10" Content="2" Click="ButtonDigit_Click" FontSize="20" FontWeight="Bold"></Button>
         <Button Name="Button3" Grid.Row="2" Grid.Column="2" Margin="10" Content="3" Click="ButtonDigit_Click" FontSize="20" FontWeight="Bold"></Button>
