--- a/WPFCalculator/App.xaml
+++ b/WPFCalculator/App.xaml
@@ -1,7 +1,8 @@
 ﻿<Application x:Class="Learning.Calculator.WPFCalculator.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="MainWindow.xaml">
+             Startup="App_Startup"
+             DispatcherUnhandledException="App_DispatcherUnhandledException">
     <Application.Resources>
          
     </Application.Resources>
