--- a/WPFCalculator/MainWindow.xaml
+++ b/WPFCalculator/MainWindow.xaml
@@ -1,42 +1,66 @@
 ﻿<Window x:Class="Learning.Calculator.WPFCalculator.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
-    <Grid Name="Grid1">
-        <Grid.RowDefinitions>
-            <RowDefinition/>
-            <RowDefinition Height="20" />
-            <RowDefinition/>
-            <RowDefinition/>
-            <RowDefinition/>
-            <RowDefinition/>
-        </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
-        </Grid.ColumnDefinitions>
-        <TextBox Margin="10" Grid.ColumnSpan="5" Name="Box" FontSize="20" FontWeight="Bold" IsReadOnly="True" />
-        <Button Name="Button1" Grid.Row="2" Grid.Column="0" Margin="10" Content="1" Click="ButtonDigit_Click" FontSize="20" FontWeight="Bold"></Button>
-        <Button Name="Button2" Grid.Row="2" Grid.Column="1" Margin="10" Content="2" Click="ButtonDigit_Click" FontSize="20" FontWeight="Bold"></Button>
-        <Button Name="Button3" Grid.Row="2" Grid.Column="2" Margin="10" Content="3" Click="ButtonDigit_Click" FontSize="20" FontWeight="Bold"></Button>
-        <Button Name="Button4" Grid.Row="3" Grid.Column="0" Margin="10" Content="4" Click="ButtonDigit_Click" FontSize="20" FontWeight="Bold"></Button>
-        <Button Name="Button5" Grid.Row="3" Grid.Column="1" Margin="10" Content="5" Click="ButtonDigit_Click" FontSize="20" FontWeight="Bold"></Button>
-        <Button Name="Button6" Grid.Row="3" Grid.Column="2" Margin="10" Content="6" Click="ButtonDigit_Click" FontSize="20" FontWeight="Bold"></Button>
-        <Button Name="Button7" Grid.Row="4" Grid.Column="0" Margin="10" Content="7" Click="ButtonDigit_Click" FontSize="20" FontWeight="Bold"></Button>
-        <Button Name="Button8" Grid.Row="4" Grid.Column="1" Margin="10" Content="8" Click="ButtonDigit_Click" FontSize="20" FontWeight="Bold"></Button>
-        <Button Name="Button9" Grid.Row="4" Grid.Column="2" Margin="10" Content="9" Click="ButtonDigit_Click" FontSize="20" FontWeight="Bold"></Button>
-        <Button Name="Button0" Grid.Row="5" Grid.Column="1" Margin="10" Content="0" Click="ButtonDigit_Click" FontSize="20" FontWeight="Bold"></Button>
-        <Button Name="ButtonDot" Grid.Row="5" Grid.Column="0" Margin="10" Content="." Click="ButtonDigit_Click" FontSize="20" FontWeight="Bold"></Button>
-        <Button Name="ButtonEqual" Grid.Row="5" Grid.Column="3" Grid.ColumnSpan="2"  Margin="10" Content="=" Click="ButtonSymbol_Click" FontSize="20" FontWeight="Bold"></Button>
-        <Button Name="ButtonPlus" Grid.Row="2" Grid.Column="3" Margin="10" Content="+" Click="ButtonSymbol_Click" FontSize="20" FontWeight="Bold"></Button>
-        <Button Name="ButtonMinus" Grid.Row="3" Grid.Column="3" Margin="10" Content="-" Click="ButtonSymbol_Click" FontSize="20" FontWeight="Bold"></Button>
-        <Button Name="ButtonMult" Grid.Row="2" Grid.Column="4" Margin="10" Content="*" Click="ButtonSymbol_Click" FontSize="20" FontWeight="Bold"></Button>
-        <Button Name="ButtonDiv" Grid.Row="3" Grid.Column="4" Margin="10" Content="/" Click="ButtonSymbol_Click" FontSize="20" FontWeight="Bold"></Button>
-        <Button Name="ButtonLeftParenthesis" Grid.Row="4" Grid.Column="3" Margin="10" Content="(" Click="ButtonSymbol_Click" FontSize="20" FontWeight="Bold"/>
-        <Button Name="ButtonRightParenthesis" Grid.Row="4" Grid.Column="4" Margin="10" Content=")" Click="ButtonSymbol_Click" FontSize="20" FontWeight="Bold"/>
-        <Button Name="ButtonClear" Grid.Row="5" Grid.Column="2" Margin="10" Content="Clear" FontSize="20" FontWeight="Bold" Click="ButtonClear_Click"></Button>
-    </Grid>
+        Title="Calculator" Height="350" Width="525">
+        <TabControl HorizontalAlignment="Stretch" Margin="1" VerticalAlignment="Stretch" >
+            <TabItem Header="Calculator">
+            <Grid Name="Grid1">
+                <Grid.RowDefinitions>
+                    <RowDefinition/>
+                    <RowDefinition Height="20" />
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+                <TextBox Margin="10" Text="{Binding Path=VisibleValue}" Grid.ColumnSpan="5" Name="Box" FontSize="20" FontWeight="Bold" IsReadOnly="True" />
+                <Button Name="Button1" Grid.Row="2" Grid.Column="0" Margin="10" Content="1" Command="{Binding AddDigitCommand}" CommandParameter="1" FontSize="20" FontWeight="Bold"></Button>
+                <Button Name="Button2" Grid.Row="2" Grid.Column="1" Margin="10" Content="2" Command="{Binding AddDigitCommand}" CommandParameter="2" FontSize="20" FontWeight="Bold"></Button>
+                <Button Name="Button3" Grid.Row="2" Grid.Column="2" Margin="10" Content="3" Command="{Binding AddDigitCommand}" CommandParameter="3" FontSize="20" FontWeight="Bold"></Button>
+                <Button Name="Button4" Grid.Row="3" Grid.Column="0" Margin="10" Content="4" Command="{Binding AddDigitCommand}" CommandParameter="4" FontSize="20" FontWeight="Bold"></Button>
+                <Button Name="Button5" Grid.Row="3" Grid.Column="1" Margin="10" Content="5" Command="{Binding AddDigitCommand}" CommandParameter="5" FontSize="20" FontWeight="Bold"></Button>
+                <Button Name="Button6" Grid.Row="3" Grid.Column="2" Margin="10" Content="6" Command="{Binding AddDigitCommand}" CommandParameter="6" FontSize="20" FontWeight="Bold"></Button>
+                <Button Name="Button7" Grid.Row="4" Grid.Column="0" Margin="10" Content="7" Command="{Binding AddDigitCommand}" CommandParameter="7" FontSize="20" FontWeight="Bold"></Button>
+                <Button Name="Button8" Grid.Row="4" Grid.Column="1" Margin="10" Content="8" Command="{Binding AddDigitCommand}" CommandParameter="8" FontSize="20" FontWeight="Bold"></Button>
+                <Button Name="Button9" Grid.Row="4" Grid.Column="2" Margin="10" Content="9" Command="{Binding AddDigitCommand}" CommandParameter="9" FontSize="20" FontWeight="Bold"></Button>
+                <Button Name="Button0" Grid.Row="5" Grid.Column="1" Margin="10" Content="0" Command="{Binding AddDigitCommand}" CommandParameter="0" FontSize="20" FontWeight="Bold"></Button>
+                <Button Name="ButtonDot" Grid.Row="5" Grid.Column="0" Margin="10" Content="." Command="{Binding AddDigitCommand}" CommandParameter="." FontSize="20" FontWeight="Bold"></Button>
+                <Button Name="ButtonEqual" Grid.Row="5" Grid.Column="3" Grid.ColumnSpan="2"  Margin="10" Content="=" Command="{Binding EqualCommand}" FontSize="20" FontWeight="Bold"></Button>
+                <Button Name="ButtonPlus" Grid.Row="2" Grid.Column="3" Margin="10" Content="+" Command="{Binding AddSymbolCommand}" CommandParameter="+" FontSize="20" FontWeight="Bold"></Button>
+                <Button Name="ButtonMinus" Grid.Row="3" Grid.Column="3" Margin="10" Content="-" Command="{Binding AddSymbolCommand}" CommandParameter="-" FontSize="20" FontWeight="Bold"></Button>
+                <Button Name="ButtonMult" Grid.Row="2" Grid.Column="4" Margin="10" Content="*" Command="{Binding AddSymbolCommand}" CommandParameter="*" FontSize="20" FontWeight="Bold"></Button>
+                <Button Name="ButtonDiv" Grid.Row="3" Grid.Column="4" Margin="10" Content="/" Command="{Binding AddSymbolCommand}" CommandParameter="/" FontSize="20" FontWeight="Bold"></Button>
+                <Button Name="ButtonLeftParenthesis" Grid.Row="4" Grid.Column="3" Margin="10" Content="(" Command="{Binding AddSymbolCommand}" CommandParameter="(" FontSize="20" FontWeight="Bold"/>
+                <Button Name="ButtonRightParenthesis" Grid.Row="4" Grid.Column="4" Margin="10" Content=")" Command="{Binding AddSymbolCommand}" CommandParameter=")" FontSize="20" FontWeight="Bold"/>
+                <Button Name="ButtonClear" Grid.Row="5" Grid.Column="2" Margin="10" Content="Clear" FontSize="20" FontWeight="Bold" Command="{Binding ClearCommand}"></Button>
+            </Grid>
+        </TabItem>
+            <TabItem Header="History">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="90"></ColumnDefinition>
+                    <ColumnDefinition ></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+                <StackPanel Grid.Column="0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+                    <Button Content="Refresh" HorizontalAlignment="Stretch" Margin="5" VerticalAlignment="Top" Height="50" FontWeight="Bold" FontSize="20" Command="{Binding RefreshCommand}"/>
+                </StackPanel>
+                <DataGrid Grid.Column="1" HorizontalAlignment="Stretch" Margin="5" VerticalAlignment="Stretch" AutoGenerateColumns="False" ItemsSource="{Binding Path=Operations}">
+                    <DataGrid.Columns>
+                        <DataGridTextColumn Header="Operation" Width="*" Binding="{Binding TokenView}"></DataGridTextColumn>
+                        <DataGridTextColumn Header="Result" Width="100" Binding="{Binding ResultValue}"></DataGridTextColumn>
+                    </DataGrid.Columns>
+                </DataGrid>
+
+
+
+            </Grid>
+            </TabItem>
+        </TabControl>
 </Window>
